"places.title" = "Places";
"custom.location.title" = "Custom Location";
"view.mode.map" = "Map";
"view.mode.list" = "List";
"view.mode" = "View Mode";
"button.show.location" = "Show Location";
"button.show.location.disabled" = "Show Location, disabled";
"button.done" = "Done";
"button.ok" = "OK";
...
"accessibility.longitude.hint" = "Enter a number between minus one eighty and one eighty";
"accessibility.show.location.hint" = "Shows the location on the map and in the list";
"accessibility.show.location.disabled.hint" = "Enter valid latitude and longitude to enable";
"accessibility.done.hint" = "Close this screen";
"accessibility.open.wikipedia" = "Opens details about this location on Wikipedia";
"accessibility.open.wikipedia.location" = "Opens Wikipedia at this location";
"accessibility.no.places.found" = "No places found.";
"accessibility.refresh" = "Refresh locations";
"accessibility.refresh.hint" = "Reloads the places";
"accessibility.retry" = "Retry";
"accessibility.retry.hint" = "Attempts to load the map locations again";
"place.location" = "Location";
"place.location.coordinates" = "Location (%@, %@)";
...
